# opencv-gftt-score

./: CMakeLists.txt  README.md
include/: cvmodified.h  tictoc.h
src/: cvmodified.cpp  main.cpp
